# digital-dvr

./: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml  server.py
src/models/: __init__.py  camera.py  video_chunk.py
